fixs paragraph alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,11 +40,10 @@ ul {
 h2 {
 float: left;
 padding: 40px;
+border-right: 5px solid;
+margin-right: 20px;
 }
 
-section {
-    border-left: 5px solid;
-}
 
 li {
 display: inline;
